13-note

(C:\Anaconda3) C:\Users\佐久間>python
Python 3.6.0 |Anaconda 4.3.1 (64-bit)| (default, Dec 23 2016, 11:57:41) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import turtle
>>> import turtle
>>> t=turtle.Turtle()
>>>
>>> t.home()
>>> t.clear()
>>>
>>> for i in range(4):
...   t.forward(200)
...   t.left(90)
...
...   print('hello')
...
hello
hello
hello
hello
>>>
>>> import turtle
>>> #t=turtle.Turtle()
...
>>> t.home()
>>> t.clear()
>>>
>>> for i in range(4):
...   for j in range(4):
...     t.forward(200)
...     t.left(90)
...   t.left(-90)
...
...
>>> import turtle
>>> #t=turtle.Turtle()
...
>>> t.home()
>>> t.clear()
>>>
>>> for i in range(4):
...   t.forward(100)
...   t.left(90)
...
...   t.home()
...   t.left(90)
...   t.forward(110)
...   t.forward(100)
...   t.forward(-100)
...   t.left(-90)
...   t.forward(10)
...   t.left(90)
...
...
...
>>>
>>> t.home()
>>> t,clear()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clear' is not defined
>>> import turtle
>>> #t=turtle.Turtle()
...
>>> t.home()
>>> t.clear()
>>>
>>> for i in range(4):
...   t.forward(100)
...   t.left(90)
...
...   t.home()
...   t.left(90)
...   t.forward(110)
...   for i in range(8):
...     t.forward(100)
...     t.forward(-100)
...     t.left(-90)
...     t.forward(10)
...     t.left(90)
...
...
...
>>> import turtle
>>> #t=turtle.Turtle()
...
>>> t.home()
>>> t.clear()
>>>
>>> for i in range(4):
...   t.forward(100)
...   t.left(90)
...
...   t.home()
...   t.left(90)
...   t.forward(110)
...   for i in range(8):
...     t.forward(100)
...     t.forward(-100)
...     t.left(-90)
...     t.forward(10)
...     t.left(90)
...
...
...
>>>
>>>
>>>
>>>
>>> import turtle
>>> #t=turtle.Turtle()
...
>>> t.home()
>>> t.clear()
>>>
>>> for i in range(4):
...   t.forward(100)
...   t.left(90)
...
...   t.home()
...   t.left(90)
...   t.forward(110)
...   for i in range(8):
...     t.forward(100)
...     t.forward(-100)
...     t.left(-90)
...     t.forward(10)
...     t.left(90)
...
...
...
>>>
>>> import turtle
>>> #t=turtle.Turtle()
...
>>> t.home()
>>> t.clear()
>>>
>>> def func():
...   i=3
...   return i
...
...   fuc()a
  File "<stdin>", line 5
    fuc()a
         ^
SyntaxError: invalid syntax
>>>
>>> def func()
  File "<stdin>", line 1
    def func()
             ^
SyntaxError: invalid syntax
>>> def func():
... i = 3
  File "<stdin>", line 2
    i = 3
    ^
IndentationError: expected an indented block
>>> return i
  File "<stdin>", line 1
SyntaxError: 'return' outside function
>>> func()def func():
  File "<stdin>", line 1
    func()def func():
            ^
SyntaxError: invalid syntax
>>>   i = 3
  File "<stdin>", line 1
    i = 3
    ^
IndentationError: unexpected indent
>>>   return i
  File "<stdin>", line 1
    return i
    ^
IndentationError: unexpected indent
>>>   func()
  File "<stdin>", line 1
    func()
    ^
IndentationError: unexpected indent
>>>
>>>
>>>
>>>
>>> def func(v):
...   i = v + 3
...   return i
...   func(5)
...
>>> func(v)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'v' is not defined
>>> def func(v):
...   i = v + 3
...   return i
...   func(5)
...
...
>>>
>>> func(5)
8
>>> func(8)
11
>>> s=0
>>> for x in range(1,101):
...   s+=x
...   s
...
1
3
6
10
15
21
28
36
45
55
66
78
91
105
120
136
153
171
190
210
231
253
276
300
325
351
378
406
435
465
496
528
561
595
630
666
703
741
780
820
861
903
946
990
1035
1081
1128
1176
1225
1275
1326
1378
1431
1485
1540
1596
1653
1711
1770
1830
1891
1953
2016
2080
2145
2211
2278
2346
2415
2485
2556
2628
2701
2775
2850
2926
3003
3081
3160
3240
3321
3403
3486
3570
3655
3741
3828
3916
4005
4095
4186
4278
4371
4465
4560
4656
4753
4851
4950
5050
>>> s
5050
>>> def total(n):
...   s=0
...   for x in range(1,n+1):
...     s+=x
...   return s
...
... total(100)
  File "<stdin>", line 7
    total(100)
        ^
SyntaxError: invalid syntax
>>>
>>> total(10)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'total' is not defined
>>>
>>> total(1000)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'total' is not defined
>>>
...
>>>
>>>
>>> def total(n):
...   s=0
...   for x in range(1,n+1):
...     s+=x
...   return s
...
...
>>>
>>>